--- a/davi-calcados-getsoftware/nbproject/project.properties
+++ b/davi-calcados-getsoftware/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/davi-calcados-getsoftware.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.3.3.jar=D:\\FACULDADE\\jcalendar-1.3.3.jar
 file.reference.TimerBean.jar=D:\\FACULDADE\\TimerBean.jar
 includes=**
 jar.compress=false
@@ -36,7 +37,8 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.PostgreSQLDriver.classpath}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.TimerBean.jar}
+    ${file.reference.TimerBean.jar}:\
+    ${file.reference.jcalendar-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
