--- a/davi-calcados-getsoftware/nbproject/project.properties
+++ b/davi-calcados-getsoftware/nbproject/project.properties
@@ -3,6 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+ant.customtasks.libs=JWSAntTasks
 application.title=davi-calcados-getsoftware
 application.vendor=Andrey Gois
 build.classes.dir=${build.dir}/classes
@@ -27,11 +28,14 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/davi-calcados-getsoftware.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
+endorsed.classpath=\
+    ${java.home}/lib/javaws.jar
 excludes=
 file.reference.TimerBean.jar=D:\\FACULDADE\\TimerBean.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.MySQLDriver.classpath}
     ${file.reference.TimerBean.jar-1}:\
@@ -63,7 +67,21 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=local
+jnlp.descriptor=application
+jnlp.enabled=true
+jnlp.icon=C:\\Users\\Junior Oliveira\\Documents\\gets.png
+jnlp.mixed.code=default
+jnlp.offline-allowed=true
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=br.com.getsoftware.davicalcados.main.PrincipalClass
+# Substitui\u00e7\u00e3o opcional do atributo de manifesto da Base de c\u00f3digo; use para impedir que RIAs sejam adaptados
+manifest.custom.codebase=
+# Substitui\u00e7\u00e3o opcional do atributo de manifesto de Permiss\u00f5es (valores suportados: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
