26/02/14 Guardando arquivos ainda não concluído

--- a/davi-calcados-getsoftware/nbproject/project.properties
+++ b/davi-calcados-getsoftware/nbproject/project.properties
@@ -6,6 +6,7 @@ annotation.processing.source.output=${build.generated.sources.dir}/ap-source-out
 ant.customtasks.libs=JWSAntTasks
 application.title=davi-calcados-getsoftware
 application.vendor=Andrey Gois
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -37,8 +38,7 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
-    ${libs.JFormDesigner-FormLayout.classpath}
+    ${libs.MySQLDriver.classpath}
     ${file.reference.TimerBean.jar-1}:\
     ${libs.beans-binding.classpath}
 =======
