--- a/davi-calcados-getsoftware/nbproject/project.properties
+++ b/davi-calcados-getsoftware/nbproject/project.properties
@@ -102,7 +102,6 @@ file.reference.javacup.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.5.0\\i
 file.reference.javassist-3.4.GA.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.5.0\\ireport\\modules\\ext\\javassist-3.4.GA.jar
 file.reference.jaxen-1.1.1.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.5.0\\ireport\\modules\\ext\\jaxen-1.1.1.jar
 file.reference.jcalendar-1.3.3.jar=C:\\Users\\wilton\\Desktop\\jcalendar-1.3.3.jar
-file.reference.jcalendar-1.3.3.jar-1=D:\\FACULDADE\\jcalendar-1.3.3.jar
 file.reference.jcommon-1.0.15.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.5.0\\ireport\\modules\\ext\\jcommon-1.0.15.jar
 file.reference.jdt-compiler-3.1.1.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.5.0\\ireport\\modules\\ext\\jdt-compiler-3.1.1.jar
 file.reference.jfreechart-1.0.12.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.5.0\\ireport\\modules\\ext\\jfreechart-1.0.12.jar
@@ -267,8 +266,7 @@ javac.classpath=\
     ${file.reference.xml-apis-ext.jar}:\
     ${file.reference.xml-apis.jar}:\
     ${file.reference.xalan.jar}:\
-    ${file.reference.jcalendar-1.3.3.jar}:\
-    ${file.reference.jcalendar-1.3.3.jar-1}
+    ${file.reference.jcalendar-1.3.3.jar}
     ${file.reference.TimerBean.jar-1}:\
     ${libs.beans-binding.classpath}
 =======
