encaminhamento de novas funcionalidades do caixa e venda.

--- a/davi-calcados-getsoftware/nbproject/project.properties
+++ b/davi-calcados-getsoftware/nbproject/project.properties
@@ -104,7 +104,7 @@ file.reference.jaxen-1.1.1.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.5.
 file.reference.jcommon-1.0.15.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.5.0\\ireport\\modules\\ext\\jcommon-1.0.15.jar
 file.reference.jdt-compiler-3.1.1.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.5.0\\ireport\\modules\\ext\\jdt-compiler-3.1.1.jar
 file.reference.jfreechart-1.0.12.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.5.0\\ireport\\modules\\ext\\jfreechart-1.0.12.jar
-file.reference.jh.jar=C:\\Users\\Andrey Gois\\Documents\\javahelp-2.0_05-src\\javahelp\\lib\\jh.jar
+file.reference.jh.jar-1=C:\\Users\\wilton\\Desktop\\jh.jar
 file.reference.joda-time-2.1.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.5.0\\ireport\\modules\\ext\\joda-time-2.1.jar
 file.reference.jpa.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.5.0\\ireport\\modules\\ext\\jpa.jar
 file.reference.js-hive-datasource-1.0.4.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.5.0\\ireport\\modules\\ext\\js-hive-datasource-1.0.4.jar
@@ -266,7 +266,7 @@ javac.classpath=\
     ${file.reference.xml-apis-ext.jar}:\
     ${file.reference.xml-apis.jar}:\
     ${file.reference.xalan.jar}:\
-    ${file.reference.jh.jar}
+    ${file.reference.jh.jar-1}
     ${file.reference.TimerBean.jar-1}:\
     ${libs.beans-binding.classpath}
 =======
